# ueb1

./: .gitignore  CG1Uebung.pro  Makefile  TODO.txt  asdad  cumstompoly.cpp  cumstompoly.h  moc_CgQtGui.cpp  uebung1
CgBase/: CgEnums.h
CgEvents/: slidermoveevent.cpp
CgQtViewer/: CgQtGui.cpp  CgQtGui.h  mylabel.cpp  myslider.cpp  myslider.h  zylinder.cpp  zylinder.h
CgSceneGraph/: CgExampleTriangle.cpp  CgExampleTriangle.h  CgSceneControl.cpp  mybox.cpp  mybox.h  mypolyline.cpp  (+1 more)
ueb2/: CG1Uebung.pro  CG1Uebung.pro.user.ae271c2  CMakeLists.txt  Makefile  moc_CgQtGui.cpp  uebung1
ueb2/CgBase/: CgBasePointCloud.h  CgBasePolygonMesh.h  CgBaseRenderableObject.h  CgBaseRenderer.h  CgBaseTriangleMesh.h  CgEnums.h
ueb2/CgClass/: Zylinder.cpp  Zylinder.h  kegel.cpp  kegel.h  koordinatensystem.cpp  koordinatensystem.h  meshfactory.cpp  meshfactory.h  pfeil.cpp  pfeil.h  rotationskoerper.cpp  rotationskoerper.h  traegerklasse.cpp  traegerklasse.h
ueb2/CgEvents/: buttonevent.cpp  eventhandler.h
ueb2/CgQtViewer/: CGQtGLRenderWidget.cpp  CgQtGLRenderWindow.h  CgQtGlBufferObject.cpp  CgQtGui.cpp  CgQtGui.cpp.autosave  CgQtGui.h  CgQtGui.h.autosave  CgTrackball.h
ueb2/CgSceneGraph/: CgExampleTriangle.cpp  CgSceneControl.cpp  CgSceneControl.cpp.autosave  CgSceneControl.h  CgSceneControl.h.autosave  Kegel.cpp  Kegel.h  Mypolyline.cpp  Mypolyline.h  Zylinder.cpp  Zylinder.h  besterslidermoveevent.h  dreieck.cpp  dreieck.h  dreiecke.cpp  kamera.cpp  kamera.h  kegel.cpp  kegel.h  koordinatensystem.cpp  koordinatensystem.h  kugel.cpp  kugel.h  meshfactory.cpp  meshfactory.h  rotationskoerper.cpp  rotationskoerper.h  sceneentity.cpp  sceneentity.h  scenegraph.cpp  slidermoveevent.cpp  slidermoveevent.h  traegerklasse.cpp  traegerklasse.h  wuerfel.cpp  wuerfel.h
ueb2/CgUtils/: ObjLoader.cpp
(+154 files in other folders)
