cmake_minimum_required(VERSION 3.9)
project(ueb2)

set(CMAKE_CXX_STANDARD 11)

add_executable(ueb2
        CgBase/CgBaseEvent.h
        CgBase/CgBasePointCloud.h
        CgBase/CgBasePolygonMesh.h
        CgBase/CgBasePolyline.h
        CgBase/CgBaseRenderableObject.h
        CgBase/CgBaseRenderer.h
        CgBase/CgBaseRenderWindow.h
        CgBase/CgBaseSceneControl.h
        CgBase/CgBaseTriangleMesh.h
        CgBase/CgEnums.h
        CgBase/CgObservable.cpp
        CgBase/CgObservable.h
        CgBase/CgObserver.h
        CgEvents/CgKeyEvent.cpp
        CgEvents/CgKeyEvent.h
        CgEvents/CgMouseEvent.cpp
        CgEvents/CgMouseEvent.h
        CgEvents/CgWindowResizeEvent.cpp
        CgEvents/CgWindowResizeEvent.h
        CgQtViewer/CgQtGlBufferObject.cpp
        CgQtViewer/CgQtGlBufferObject.h
        CgQtViewer/CGQtGLRenderWidget.cpp
        CgQtViewer/CgQtGLRenderWidget.h
        CgQtViewer/CgQtGLRenderWindow.cpp
        CgQtViewer/CgQtGLRenderWindow.h
        CgQtViewer/CgQtGui.cpp
        CgQtViewer/CgQtGui.h
        CgQtViewer/CgQtMainApplication.cpp
        CgQtViewer/CgQtMainApplication.h
        CgQtViewer/CgTrackball.cpp
        CgQtViewer/CgTrackball.h
        CgSceneGraph/CgExampleTriangle.cpp
        CgSceneGraph/CgSceneControl.cpp
        CgSceneGraph/CgSceneControl.h
        CgSceneGraph/kegel.cpp
        CgSceneGraph/kegel.h
        CgSceneGraph/meshfactory.cpp
        CgSceneGraph/meshfactory.h
        CgSceneGraph/Mypolyline.cpp
        CgSceneGraph/Mypolyline.h
        CgSceneGraph/Zylinder.cpp
        CgSceneGraph/Zylinder.h
        main.cpp
        moc_CgQtGLRenderWidget.cpp
        moc_CgQtGui.cpp
        moc_CgQtMainApplication.cpp)
